--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:background="@color/colorDivider"
     tools:context="com.example.bustomi.aplikasi_warteg.MainActivity">
 
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -32,6 +33,13 @@
             app:pageColor="@color/colorDivider"
             app:snap="false" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5">
+
+    </View>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -140,19 +148,43 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView
+                android:id="@+id/cv_busines"
+                android:layout_width="@dimen/width_menu_card"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/margin_menu_card"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/height_menu_image"
+                        android:layout_weight="2"
+                        android:padding="@dimen/menu_image_padding"
+                        android:src="@drawable/ic_business_black_24dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/height_menu_textMenu"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Perusahaan"
+                        android:textSize="@dimen/textSize_menu_main" />
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.2"/>
+            android:layout_weight="0.2" />
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5">
-
-    </View>
 
 </LinearLayout>
